--- a/index.html
+++ b/index.html
@@ -47,9 +47,62 @@
     </nav>
     <!-- Fin Navbar -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <!-- contenerdor -->
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card-body mx-auto p-5">
+                <p class="card-text-one"><a class="btn btn-primary me-2"><strong>Nuevo</strong></a>Adquiere nuestra
+                    nueva tarjeta de crédito.</p>
+                <h2 class="card-title"><strong>La mejor banca digital<span class="text-punto">.</span></strong></h2>
+                <p class="card-text py-2">Dile adiós a los bancos tradicionales y disfruta todos los beneficios de un
+                    banco
+                    100% digital.</p>
+                <a href="#" class="btn btn-primary">Abre tu cuenta hoy</a>
+            </div>
+        </div>
+    </div>
+    <!-- Fin contenedor -->
+
+    <!-- store -->
+    <div class="row row-cols-md-4">
+        <div class="row mx-4">
+            <div class="col">
+                <img src="img/logo-apple.svg" class="img" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <p class="card-text">Consiguelo en</p>
+                    <h5 class="card-title"><strong>App Store</strong></h5>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row mx-4">
+            <div class="col">
+                <img src="img/logo-playstore.svg" class="img" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <p class="card-text">Disponible en</p>
+                    <h5 class="card-title"><strong>Play Store</strong></h5>
+
+                </div>
+            </div>
+        </div>
+        <!-- Fin store -->
+
+        <!-- imagen-->
+        <div class="row row-cols">
+        <div class="col bg-phone">
+            <img src="img/phone.png" class="img-fluid rounded-start" alt="...">
+        </div>
+    </div>
+        <!-- Fin imagen -->
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
